--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Chatbot USITTEL - Dependencias
 
 # Framework web
-streamlit==1.29.0
+streamlit
 
 # Análisis de datos
-pandas==2.1.4
+pandas
 
 # API de Google Gemini
-google-generativeai==0.3.2
+google-generativeai
 
 # Utilidades
-python-dotenv==1.0.0
+python-dotenv
